apps/mb-napmap-webapi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mb-napmap-webapi-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      pod: mb-napmap-webapi-label
  template:
    metadata:
      labels:
        pod: mb-napmap-webapi-label
    spec:
      volumes:
      - name: init-scripts
        configMap:
          name: mb-napmap-webapi-mongodb-init
      containers:
      - name: mb-napmap-webapi-container
        image: bednarmaros341/napmap-webapi
        imagePullPolicy: Always
        ports:
        - name: webapi-port
          containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "0.01"
          limits:
            memory: "512Mi"
            cpu: "0.3"
