apps/mb-napmap-webapi/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mb-napmap-webapi
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: wac-hospital-gateway
    namespace: wac-hospital
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: wac-hospital-gateway
    namespace: wac-hospital-system
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: mb-napmap-webapi
      port: 80
      weight: 1
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          replacePrefixMatch: /api
          type: ReplacePrefixMatch
    matches:
    - path:
        type: PathPrefix
        value: /mb-napmap-api
